<resources>
    <string name="app_name">Persistencia</string>
    <string name="memoria_interna">Memória Interna</string>
    <string name="memoria_externa_priv">Memória Externa (Privado)</string>
    <string name="memoria_externa_publ">Memória Externa (Pública)</string>
    <string name="salvar">Salvar</string>
    <string name="ler">Ler</string>
    <string name="message_permission_request">Você precisar habilitar essa permissão para poder ler o salvar arquivo</string>
    <string name="permission_granted">Permissão concedida</string>
    <string name="permission_denied">Permissão negada</string>
</resources>